AC_INIT([xcbautolock], [0.1], [https://github.com/bapt/xcbautolock])
AM_INIT_AUTOMAKE([1.11 foreign -Wall -Wno-portability])
AM_SILENT_RULES([yes])
AM_MAINTAINER_MODE([enable])
AC_GNU_SOURCE
AC_PROG_CC_C99
PKG_PROG_PKG_CONFIG
PKG_CHECK_MODULES([xcb], [xcb xcb-screensaver])

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
